Page heading refactor, CSS fixes for responsive, Fixed white space issue on right of page.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -371,6 +371,8 @@ body {
 .page.page-contact .header {
   background: url('/images/mediapig-support2.svg') center 45px no-repeat;
   height: 720px;
+  position: absolute;
+  width: 95%;
 }
 
 .page.page-contact .header a.active,
@@ -395,6 +397,10 @@ body {
   background-color: #faf9f4;
 }
 
+.page.page-contact .intro-head {
+  background-color: transparent;
+}
+
 .page.page-contact .content input[type="text"],
 .page.page-contact .content input[type="email"],
 .page.page-contact .content textarea {
@@ -407,6 +413,14 @@ body {
   margin: 0 auto;
   display: block;
   color: #FFF;
+}
+
+.home .header {
+  width: 95%;
+}
+
+.page .header {
+  position: relative;
 }
 
 .line {
@@ -607,6 +621,7 @@ body {
 
 .intro-head {
   color: #FFF;
+  background-color: #4E4D55;
 }
 
 .home .bg,
@@ -764,11 +779,10 @@ body {
   padding: 30px 0;
   display: block;
   max-width: 1140px;
-  position: absolute;
   width: 100%;
   top: 0;
+  position: absolute;
 }
-
 
 .header ul  {
   padding-top: 8px;
